--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,8 @@
   --primary-clr: #45a0a1;
   --dark-clr: #0a0a0a;
   --text-clr: #4c4c4c;
+  --light-gold:#E0B252;
+  --dark-gold: #af7d27;
   --red-clr: tomato;
   --light-clr: #ffffff;
   --primary-ff: 'Karla', sans-serif;
