Add description section on single product page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
   --fainter-grey: rgba(136,136,136,.04);
   --light-gold: #e0b252;
   --dark-gold: #af7d27;
+  --light-bg: #F9F9F9;
   --red-clr: tomato;
   --light-clr: #ffffff;
   --primary-ff: 'Karla', sans-serif;
