Add to cart functionality

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,6 +63,10 @@ p {
   color: var(--text-clr);
 }
 
+input, button {
+  font-family: var(--primary-ff);
+}
+
 input:focus,
 button:focus,
 button:active {
