Add review redux action and reducer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,3 +80,9 @@ button:active {
   overflow: hidden;
   padding: 0 2rem;
 }
+
+@media(max-width: 768px){
+  .container{
+    padding: 0 1rem;
+  }
+}
